RESOLVED FIXED269501
[UnifiedPDF] Fix context menu page navigation for 2up
https://bugs.webkit.org/show_bug.cgi?id=269501
Summary [UnifiedPDF] Fix context menu page navigation for 2up
Sammy Gill
Reported 2024-02-15 13:29:37 PST
The navigation options do not work properly sometimes in the two up display modes. This is because sometimes they determine the next/previous pages without considering which page is the "current page" in the pair. It should always navigate between the next/previous pair of pages
Attachments
Radar WebKit Bug Importer
Comment 1 2024-02-15 13:29:49 PST
Sammy Gill
Comment 2 2024-02-15 13:49:22 PST
EWS
Comment 3 2024-02-16 11:15:49 PST
Committed 274858@main (55b05170db3b): <https://commits.webkit.org/274858@main> Reviewed commits have been landed. Closing PR #24541 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.